Add Mudblazor and setup client

--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ExternalLogin.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ExternalLogin.razor
@@ -8,6 +8,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using GoldEx.Server.Services
+@using GoldEx.Server.Components.Account.Shared
 
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
