--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/LoginWithRecoveryCode.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/LoginWithRecoveryCode.razor
@@ -4,6 +4,7 @@
 @using GoldEx.Sdk.Server.Domain.Entities.Identity
 @using Microsoft.AspNetCore.Identity
 @using GoldEx.Server.Services
+@using GoldEx.Server.Components.Account.Shared
 
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
