--- a/src/App/Server/GoldEx.Server/Components/App.razor
+++ b/src/App/Server/GoldEx.Server/Components/App.razor
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <link rel="stylesheet" href="@Assets["GoldEx.styles.css"]" />
     <ImportMap />
+    
+    <!-- Add MudBlazor -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <!-- -->
+
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="RenderModeForPage" />
 </head>
@@ -16,6 +22,8 @@
 <body>
     <Routes @rendermode="RenderModeForPage" />
     <script src="_framework/blazor.web.js"></script>
+
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
