--- a/src/App/Server/GoldEx.Server/Components/App.razor
+++ b/src/App/Server/GoldEx.Server/Components/App.razor
@@ -7,7 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
     <link rel="stylesheet" href="@Assets["app.css"]" />
-    <link rel="stylesheet" href="@Assets["GoldEx.styles.css"]" />
+    <link rel="stylesheet" href="@Assets["GoldEx.Server.styles.css"]" />
     <ImportMap />
     
     <!-- Add MudBlazor -->
