--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ChangePassword.razor
@@ -11,39 +11,41 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<ChangePassword> Logger
 
-<PageTitle>Change password</PageTitle>
+<PageTitle>تغییر رمز عبور</PageTitle>
 
-<h3>Change password</h3>
-<StatusMessage Message="@message" />
-<div class="row">
-    <div class="col-xl-6">
-        <EditForm Model="Input" FormName="change-password" OnValidSubmit="OnValidSubmitAsync" method="post">
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert" />
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.OldPassword" id="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Enter the old password" />
-                <label for="Input.OldPassword" class="form-label">Old password</label>
-                <ValidationMessage For="() => Input.OldPassword" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Enter the new password" />
-                <label for="Input.NewPassword" class="form-label">New password</label>
-                <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Enter the new password" />
-                <label for="Input.ConfirmPassword" class="form-label">Confirm password</label>
-                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
-        </EditForm>
-    </div>
-</div>
+<MudText Typo="Typo.h6" GutterBottom="true">تغییر رمز عبور</MudText>
+
+<StatusMessage Message="@_message" />
+
+<EditForm Model="Input" FormName="change-password" OnValidSubmit="OnValidSubmitAsync" method="post">
+    <DataAnnotationsValidator />
+
+    <MudGrid>
+        <MudItem md="12">
+            <MudStaticTextField For="@(() => Input.OldPassword)" @bind-Value="Input.OldPassword" InputType="InputType.Password"
+                                Label="رمز عبور فعلی" Placeholder="رمز عبور فعلی" HelperText="لطفا رمز عبور فعلی خود را وارد کنید"
+                                UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "current-password" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticTextField For="@(() => Input.NewPassword)" @bind-Value="Input.NewPassword" InputType="InputType.Password"
+                                Label="رمز عبور جدید" Placeholder="رمز عبور جدید" HelperText="لطفا رمز عبور جدید خود را وارد کنید"
+                                UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "new-password" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticTextField For="@(() => Input.ConfirmPassword)" @bind-Value="Input.ConfirmPassword" InputType="InputType.Password"
+                                Label="تکرار رمز عبور" Placeholder="تکرار رمز عبور" HelperText="لطفا رمز عبور جدید خود را تکرار کنید"
+                                UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "new-password" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">ذخیره تغییرات</MudStaticButton>
+        </MudItem>
+    </MudGrid>
+</EditForm>
 
 @code {
-    private string? message;
-    private AppUser user = default!;
-    private bool hasPassword;
+    private string? _message;
+    private AppUser _user = default!;
+    private bool _hasPassword;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
@@ -53,9 +55,9 @@
 
     protected override async Task OnInitializedAsync()
     {
-        user = await UserAccessor.GetRequiredUserAsync(HttpContext);
-        hasPassword = await UserManager.HasPasswordAsync(user);
-        if (!hasPassword)
+        _user = await UserAccessor.GetRequiredUserAsync(HttpContext);
+        _hasPassword = await UserManager.HasPasswordAsync(_user);
+        if (!_hasPassword)
         {
             RedirectManager.RedirectTo("Account/Manage/SetPassword");
         }
@@ -63,35 +65,35 @@
 
     private async Task OnValidSubmitAsync()
     {
-        var changePasswordResult = await UserManager.ChangePasswordAsync(user, Input.OldPassword, Input.NewPassword);
+        var changePasswordResult = await UserManager.ChangePasswordAsync(_user, Input.OldPassword, Input.NewPassword);
         if (!changePasswordResult.Succeeded)
         {
-            message = $"Error: {string.Join(",", changePasswordResult.Errors.Select(error => error.Description))}";
+            _message = $"Error: {string.Join(",", changePasswordResult.Errors.Select(error => error.Description))}";
             return;
         }
 
-        await SignInManager.RefreshSignInAsync(user);
+        await SignInManager.RefreshSignInAsync(_user);
         Logger.LogInformation("User changed their password successfully.");
 
-        RedirectManager.RedirectToCurrentPageWithStatus("Your password has been changed", HttpContext);
+        RedirectManager.RedirectToCurrentPageWithStatus("رمز عبور شما با موفقیت تغییر یافت", HttpContext);
     }
 
     private sealed class InputModel
     {
         [Required]
         [DataType(DataType.Password)]
-        [Display(Name = "Current password")]
+        [Display(Name = "رمز فعلی")]
         public string OldPassword { get; set; } = "";
 
         [Required]
-        [StringLength(100, ErrorMessage = "The {0} must be at least {2} and at max {1} characters long.", MinimumLength = 6)]
+        [StringLength(100, ErrorMessage = "اندازه {0} حداقل باید {2} و حداکثر {1} حرف باشد", MinimumLength = 6)]
         [DataType(DataType.Password)]
-        [Display(Name = "New password")]
+        [Display(Name = "رمز جدید")]
         public string NewPassword { get; set; } = "";
 
         [DataType(DataType.Password)]
-        [Display(Name = "Confirm new password")]
-        [Compare("NewPassword", ErrorMessage = "The new password and confirmation password do not match.")]
+        [Display(Name = "تکرار رمز جدید")]
+        [Compare(nameof(NewPassword), ErrorMessage = "رمز عبور و رمز عبور جدید مطابقت ندارند")]
         public string ConfirmPassword { get; set; } = "";
     }
 }
