--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/Disable2fa.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/Disable2fa.razor
@@ -9,39 +9,39 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<Disable2fa> Logger
 
-<PageTitle>Disable two-factor authentication (2FA)</PageTitle>
+<PageTitle>غیرفعال سازی رمز دو مرحله ای (2FA)</PageTitle>
 
 <StatusMessage />
-<h3>Disable two-factor authentication (2FA)</h3>
+<h3>غیرفعال سازی رمز دو مرحله ای (2FA)</h3>
 
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>This action only disables 2FA.</strong>
+        <strong>انجام این عملیات باعث غیرفعال سازی تایید دو مرحله ای می گردد</strong>
     </p>
     <p>
-        Disabling 2FA does not change the keys used in authenticator apps. If you wish to change the key
-        used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</a>
+        غیرفعال کردن تأیید هویت دو مرحله‌ای، کلیدهای استفاده شده در برنامه‌های احراز هویت را تغییر نمی‌دهد.
+        اگر می‌خواهید کلید مورد استفاده در یک برنامه احراز هویت را تغییر دهید، باید <a href="Account/Manage/ResetAuthenticator">کلیدهای احراز هویت خود را بازنشانی کنید.</a>
     </p>
 </div>
 
 <div>
     <form @formname="disable-2fa" @onsubmit="OnSubmitAsync" method="post">
         <AntiforgeryToken />
-        <button class="btn btn-danger" type="submit">Disable 2FA</button>
+        <button class="btn btn-danger" type="submit">غیرفعال سازی 2FA</button>
     </form>
 </div>
 
 @code {
-    private AppUser user = default!;
+    private AppUser _user = default!;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
 
     protected override async Task OnInitializedAsync()
     {
-        user = await UserAccessor.GetRequiredUserAsync(HttpContext);
+        _user = await UserAccessor.GetRequiredUserAsync(HttpContext);
 
-        if (HttpMethods.IsGet(HttpContext.Request.Method) && !await UserManager.GetTwoFactorEnabledAsync(user))
+        if (HttpMethods.IsGet(HttpContext.Request.Method) && !await UserManager.GetTwoFactorEnabledAsync(_user))
         {
             throw new InvalidOperationException("Cannot disable 2FA for user as it's not currently enabled.");
         }
@@ -49,17 +49,15 @@
 
     private async Task OnSubmitAsync()
     {
-        var disable2faResult = await UserManager.SetTwoFactorEnabledAsync(user, false);
-        if (!disable2faResult.Succeeded)
-        {
+        var disable2FaResult = await UserManager.SetTwoFactorEnabledAsync(_user, false);
+        if (!disable2FaResult.Succeeded)
             throw new InvalidOperationException("Unexpected error occurred disabling 2FA.");
-        }
 
-        var userId = await UserManager.GetUserIdAsync(user);
+        var userId = await UserManager.GetUserIdAsync(_user);
         Logger.LogInformation("User with ID '{UserId}' has disabled 2fa.", userId);
         RedirectManager.RedirectToWithStatus(
             "Account/Manage/TwoFactorAuthentication",
-            "2fa has been disabled. You can reenable 2fa when you setup an authenticator app",
+            "تأیید هویت دو مرحله‌ای غیرفعال شده است. شما می‌توانید هنگام تنظیم برنامه احراز هویت، دوباره تأیید هویت دو مرحله‌ای را فعال کنید.",
             HttpContext);
     }
 }
