--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -11,27 +11,27 @@
 @inject IUserStore<AppUser> UserStore
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Manage your external logins</PageTitle>
+<PageTitle>مدیریت اتصال به سرویس‌های احراز هویت خارجی</PageTitle>
 
 <StatusMessage />
-@if (currentLogins?.Count > 0)
+@if (_currentLogins?.Count > 0)
 {
-    <h3>Registered Logins</h3>
+    <h3>سرویس های ثبت شده</h3>
     <table class="table">
         <tbody>
-            @foreach (var login in currentLogins)
+            @foreach (var login in _currentLogins)
             {
                 <tr>
                     <td>@login.ProviderDisplayName</td>
                     <td>
-                        @if (showRemoveButton)
+                        @if (_showRemoveButton)
                         {
                             <form @formname="@($"remove-login-{login.LoginProvider}")" @onsubmit="OnSubmitAsync" method="post">
                                 <AntiforgeryToken />
                                 <div>
                                     <input type="hidden" name="@nameof(LoginProvider)" value="@login.LoginProvider" />
                                     <input type="hidden" name="@nameof(ProviderKey)" value="@login.ProviderKey" />
-                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remove</button>
+                                    <button type="submit" class="btn btn-primary" title="حذف @login.ProviderDisplayName از سیستم احراز هویت">حذف</button>
                                 </div>
                             </form>
                         }
@@ -45,17 +45,17 @@
         </tbody>
     </table>
 }
-@if (otherLogins?.Count > 0)
+@if (_otherLogins?.Count > 0)
 {
-    <h4>Add another service to log in.</h4>
+    <h4>افزودن سرویس احراز هویت</h4>
     <hr />
     <form class="form-horizontal" action="Account/Manage/LinkExternalLogin" method="post">
         <AntiforgeryToken />
         <div>
             <p>
-                @foreach (var provider in otherLogins)
+                @foreach (var provider in _otherLogins)
                 {
-                    <button type="submit" class="btn btn-primary" name="Provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
+                    <button type="submit" class="btn btn-primary" name="Provider" value="@provider.Name" title="ورود با استفاده از حساب @provider.DisplayName">
                         @provider.DisplayName
                     </button>
                 }
@@ -67,10 +67,10 @@
 @code {
     public const string LinkLoginCallbackAction = "LinkLoginCallback";
 
-    private AppUser user = default!;
-    private IList<UserLoginInfo>? currentLogins;
-    private IList<AuthenticationScheme>? otherLogins;
-    private bool showRemoveButton;
+    private AppUser _user = default!;
+    private IList<UserLoginInfo>? _currentLogins;
+    private IList<AuthenticationScheme>? _otherLogins;
+    private bool _showRemoveButton;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
@@ -86,19 +86,19 @@
 
     protected override async Task OnInitializedAsync()
     {
-        user = await UserAccessor.GetRequiredUserAsync(HttpContext);
-        currentLogins = await UserManager.GetLoginsAsync(user);
-        otherLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync())
-            .Where(auth => currentLogins.All(ul => auth.Name != ul.LoginProvider))
+        _user = await UserAccessor.GetRequiredUserAsync(HttpContext);
+        _currentLogins = await UserManager.GetLoginsAsync(_user);
+        _otherLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync())
+            .Where(auth => _currentLogins.All(ul => auth.Name != ul.LoginProvider))
             .ToList();
 
         string? passwordHash = null;
         if (UserStore is IUserPasswordStore<AppUser> userPasswordStore)
         {
-            passwordHash = await userPasswordStore.GetPasswordHashAsync(user, HttpContext.RequestAborted);
+            passwordHash = await userPasswordStore.GetPasswordHashAsync(_user, HttpContext.RequestAborted);
         }
 
-        showRemoveButton = passwordHash is not null || currentLogins.Count > 1;
+        _showRemoveButton = passwordHash is not null || _currentLogins.Count > 1;
 
         if (HttpMethods.IsGet(HttpContext.Request.Method) && Action == LinkLoginCallbackAction)
         {
@@ -108,34 +108,34 @@
 
     private async Task OnSubmitAsync()
     {
-        var result = await UserManager.RemoveLoginAsync(user, LoginProvider!, ProviderKey!);
+        var result = await UserManager.RemoveLoginAsync(_user, LoginProvider!, ProviderKey!);
         if (!result.Succeeded)
         {
-            RedirectManager.RedirectToCurrentPageWithStatus("Error: The external login was not removed.", HttpContext);
+            RedirectManager.RedirectToCurrentPageWithStatus("خطا: حذف سرویس با خطا مواجه شد", HttpContext);
         }
 
-        await SignInManager.RefreshSignInAsync(user);
-        RedirectManager.RedirectToCurrentPageWithStatus("The external login was removed.", HttpContext);
+        await SignInManager.RefreshSignInAsync(_user);
+        RedirectManager.RedirectToCurrentPageWithStatus("سرویس احراز هویت با موفقیت حذف شد.", HttpContext);
     }
 
     private async Task OnGetLinkLoginCallbackAsync()
     {
-        var userId = await UserManager.GetUserIdAsync(user);
+        var userId = await UserManager.GetUserIdAsync(_user);
         var info = await SignInManager.GetExternalLoginInfoAsync(userId);
         if (info is null)
         {
-            RedirectManager.RedirectToCurrentPageWithStatus("Error: Could not load external login info.", HttpContext);
+            RedirectManager.RedirectToCurrentPageWithStatus("خطا: اطلاعات سرویس لود نشد", HttpContext);
         }
 
-        var result = await UserManager.AddLoginAsync(user, info);
+        var result = await UserManager.AddLoginAsync(_user, info);
         if (!result.Succeeded)
         {
-            RedirectManager.RedirectToCurrentPageWithStatus("Error: The external login was not added. External logins can only be associated with one account.", HttpContext);
+            RedirectManager.RedirectToCurrentPageWithStatus("خطا: متاسفانه احراز هویت خارجی اضافه نشد. هر سرویس خارجی فقط می‌تواند به یک حساب کاربری اصلی متصل باشد.", HttpContext);
         }
 
         // Clear the existing external cookie to ensure a clean login process
         await HttpContext.SignOutAsync(IdentityConstants.ExternalScheme);
 
-        RedirectManager.RedirectToCurrentPageWithStatus("The external login was added.", HttpContext);
+        RedirectManager.RedirectToCurrentPageWithStatus("سرویس احراز هویت با موفقیت به حساب افزوده شد.", HttpContext);
     }
 }
