--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -6,52 +6,51 @@
 
 @inject UserManager<AppUser> UserManager
 @inject IdentityUserAccessor UserAccessor
-@inject IdentityRedirectManager RedirectManager
 @inject ILogger<GenerateRecoveryCodes> Logger
 
-<PageTitle>Generate two-factor authentication (2FA) recovery codes</PageTitle>
+<PageTitle>ایجاد کدهای ریکاوری برای احراز هویت دو مرحله‌ای</PageTitle>
 
-@if (recoveryCodes is not null)
+@if (_recoveryCodes is not null)
 {
-    <ShowRecoveryCodes RecoveryCodes="recoveryCodes.ToArray()" StatusMessage="@message" />
+    <ShowRecoveryCodes RecoveryCodes="_recoveryCodes.ToArray()" StatusMessage="@_message" />
 }
 else
 {
-    <h3>Generate two-factor authentication (2FA) recovery codes</h3>
+    <h3>ایجاد کدهای بازیابی برای احراز هویت دو مرحله‌ای</h3>
     <div class="alert alert-warning" role="alert">
         <p>
             <span class="glyphicon glyphicon-warning-sign"></span>
-            <strong>Put these codes in a safe place.</strong>
+            <strong>این کدها را در جای امنی قرار دهید.</strong>
         </p>
         <p>
-            If you lose your device and don't have the recovery codes you will lose access to your account.
+            در صورت گم شدن دستگاه و عدم دسترسی به کدهای بازیابی، دسترسی شما به حسابتان قطع خواهد شد.
         </p>
         <p>
-            Generating new recovery codes does not change the keys used in authenticator apps. If you wish to change the key
-            used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</a>
+            تولید کدهای بازیابی جدید، کلیدهای استفاده شده در برنامه‌های احراز هویت را تغییر نمی‌دهد.
+            اگر می‌خواهید کلید مورد استفاده در یک برنامه احراز هویت را تغییر دهید، باید <a href="Account/Manage/ResetAuthenticator">کلیدهای احراز هویت خود را بازنشانی کنید.</a>
         </p>
     </div>
     <div>
         <form @formname="generate-recovery-codes" @onsubmit="OnSubmitAsync" method="post">
             <AntiforgeryToken />
-            <button class="btn btn-danger" type="submit">Generate Recovery Codes</button>
+            <button class="btn btn-danger" type="submit">تولید کلیدهای بازیابی</button>
         </form>
     </div>
 }
 
 @code {
-    private string? message;
-    private AppUser user = default!;
-    private IEnumerable<string>? recoveryCodes;
+    private string? _message;
+    private AppUser _user = default!;
+    private IEnumerable<string>? _recoveryCodes;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
 
     protected override async Task OnInitializedAsync()
     {
-        user = await UserAccessor.GetRequiredUserAsync(HttpContext);
+        _user = await UserAccessor.GetRequiredUserAsync(HttpContext);
 
-        var isTwoFactorEnabled = await UserManager.GetTwoFactorEnabledAsync(user);
+        var isTwoFactorEnabled = await UserManager.GetTwoFactorEnabledAsync(_user);
         if (!isTwoFactorEnabled)
         {
             throw new InvalidOperationException("Cannot generate recovery codes for user because they do not have 2FA enabled.");
@@ -60,9 +59,9 @@ else
 
     private async Task OnSubmitAsync()
     {
-        var userId = await UserManager.GetUserIdAsync(user);
-        recoveryCodes = await UserManager.GenerateNewTwoFactorRecoveryCodesAsync(user, 10);
-        message = "You have generated new recovery codes.";
+        var userId = await UserManager.GetUserIdAsync(_user);
+        _recoveryCodes = await UserManager.GenerateNewTwoFactorRecoveryCodesAsync(_user, 10);
+        _message = "کدهای بازیابی جدید ساخته شد.";
 
         Logger.LogInformation("User with ID '{UserId}' has generated new 2FA recovery codes.", userId);
     }
