--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/SetPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/SetPassword.razor
@@ -10,13 +10,13 @@
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Set password</PageTitle>
+<PageTitle>تنظیم رمز عبور</PageTitle>
 
-<h3>Set your password</h3>
-<StatusMessage Message="@message" />
+<h3>تنظیم رمز عبور</h3>
+<StatusMessage Message="@_message" />
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    شما برای این سایت نام کاربری/رمز عبور محلی ندارید.
+    یک حساب کاربری محلی اضافه کنید تا بتوانید بدون ورود با سرویس وارد شوید.
 </p>
 <div class="row">
     <div class="col-xl-6">
@@ -24,23 +24,25 @@
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" autocomplete="new-password" placeholder="Enter the new password" />
-                <label for="Input.NewPassword" class="form-label">New password</label>
+                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" 
+                           autocomplete="new-password" placeholder="رمز عبور جدید خود را وارد کنید" />
+                <label for="Input.NewPassword" class="form-label">رمز عبور جدید</label>
                 <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="Enter the new password" />
-                <label for="Input.ConfirmPassword" class="form-label">Confirm password</label>
+                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" 
+                           autocomplete="new-password" placeholder="رمز عبور جدید خود را وارد کنید" />
+                <label for="Input.ConfirmPassword" class="form-label">تکرار رمز عبور جدید</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Set password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">تنظیم رمز عبور</button>
         </EditForm>
-     </div>
+    </div>
 </div>
 
 @code {
-    private string? message;
-    private AppUser user = default!;
+    private string? _message;
+    private AppUser _user = default!;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
@@ -50,9 +52,9 @@
 
     protected override async Task OnInitializedAsync()
     {
-        user = await UserAccessor.GetRequiredUserAsync(HttpContext);
+        _user = await UserAccessor.GetRequiredUserAsync(HttpContext);
 
-        var hasPassword = await UserManager.HasPasswordAsync(user);
+        var hasPassword = await UserManager.HasPasswordAsync(_user);
         if (hasPassword)
         {
             RedirectManager.RedirectTo("Account/Manage/ChangePassword");
@@ -61,28 +63,28 @@
 
     private async Task OnValidSubmitAsync()
     {
-        var addPasswordResult = await UserManager.AddPasswordAsync(user, Input.NewPassword!);
+        var addPasswordResult = await UserManager.AddPasswordAsync(_user, Input.NewPassword!);
         if (!addPasswordResult.Succeeded)
         {
-            message = $"Error: {string.Join(",", addPasswordResult.Errors.Select(error => error.Description))}";
+            _message = $"Error: {string.Join(",", addPasswordResult.Errors.Select(error => error.Description))}";
             return;
         }
 
-        await SignInManager.RefreshSignInAsync(user);
-        RedirectManager.RedirectToCurrentPageWithStatus("Your password has been set.", HttpContext);
+        await SignInManager.RefreshSignInAsync(_user);
+        RedirectManager.RedirectToCurrentPageWithStatus("رمز عبور شما با موفقیت تنظیم شد.", HttpContext);
     }
 
     private sealed class InputModel
     {
         [Required]
-        [StringLength(100, ErrorMessage = "The {0} must be at least {2} and at max {1} characters long.", MinimumLength = 6)]
+        [StringLength(100, ErrorMessage = "طول {0} حداقل باید {2} و حداکثر {1} حرف باشد", MinimumLength = 6)]
         [DataType(DataType.Password)]
-        [Display(Name = "New password")]
+        [Display(Name = "رمز عبور جدید")]
         public string? NewPassword { get; set; }
 
         [DataType(DataType.Password)]
-        [Display(Name = "Confirm new password")]
-        [Compare("NewPassword", ErrorMessage = "The new password and confirmation password do not match.")]
+        [Display(Name = "تکرار رمز عبور جدید")]
+        [Compare(nameof(NewPassword), ErrorMessage = "رمز عبور و رمز عبور جدید مطابقت ندارند")]
         public string? ConfirmPassword { get; set; }
     }
 }
