--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -10,73 +10,84 @@
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Two-factor authentication (2FA)</PageTitle>
+<PageTitle>احراز هویت دو مرحله ای (2FA)</PageTitle>
+
+<MudText Typo="Typo.h6" GutterBottom="true">احراز هویت دو مرحله ای (2FA)</MudText>
 
 <StatusMessage />
-<h3>Two-factor authentication (2FA)</h3>
-@if (canTrack)
+
+@if (_canTrack)
 {
-    if (is2faEnabled)
+    if (_is2FaEnabled)
     {
-        if (recoveryCodesLeft == 0)
+        if (_recoveryCodesLeft == 0)
         {
-            <div class="alert alert-danger">
-                <strong>You have no recovery codes left.</strong>
-                <p>You must <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
-            </div>
+            <MudAlert Variant="Variant.Text" Severity="Severity.Error">شما دیگر کد بازیابی ندارید.</MudAlert>
+
+            <MudText Typo="Typo.body1" Class="pt-4">
+                شما قبل از ورود باید <MudLink Href="Account/Manage/GenerateRecoveryCodes">کدهای بازیابی جدیدی</MudLink> تولید کنید
+            </MudText>
         }
-        else if (recoveryCodesLeft == 1)
+        else if (_recoveryCodesLeft == 1)
         {
-            <div class="alert alert-danger">
-                <strong>You have 1 recovery code left.</strong>
-                <p>You can <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
-            </div>
+            <MudAlert Variant="Variant.Text" Severity="Severity.Warning">شما 1 کد بازیابی قابل استفاده دارید</MudAlert>
+
+            <MudText Typo="Typo.body1" Class="pt-4">
+                شما می توانید <MudLink Href="Account/Manage/GenerateRecoveryCodes">کدهای بازیابی جدیدی</MudLink> تولید کنید.
+            </MudText>
         }
-        else if (recoveryCodesLeft <= 3)
+        else if (_recoveryCodesLeft <= 3)
         {
-            <div class="alert alert-warning">
-                <strong>You have @recoveryCodesLeft recovery codes left.</strong>
-                <p>You should <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
-            </div>
+            <MudAlert Variant="Variant.Text" Severity="Severity.Warning">شما @_recoveryCodesLeft کد بازیابی قابل استفاده دارید.</MudAlert>
+
+            <MudText Typo="Typo.body1" Class="pt-4">
+                شما باید <MudLink Href="Account/Manage/GenerateRecoveryCodes">کدهای بازیابی جدیدی</MudLink> تولید کنید
+            </MudText>
         }
 
-        if (isMachineRemembered)
+        if (_isMachineRemembered)
         {
             <form style="display: inline-block" @formname="forget-browser" @onsubmit="OnSubmitForgetBrowserAsync" method="post">
                 <AntiforgeryToken />
-                <button type="submit" class="btn btn-primary">Forget this browser</button>
+
+                <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">فراموشی این مرورگر</MudStaticButton>
             </form>
         }
 
-        <a href="Account/Manage/Disable2fa" class="btn btn-primary">Disable 2FA</a>
-        <a href="Account/Manage/GenerateRecoveryCodes" class="btn btn-primary">Reset recovery codes</a>
+        <MudLink Href="Account/Manage/Disable2fa">غیرفعال سازی احراز هویت دو مرحله ای</MudLink>
+        <br />
+        <MudLink Href="Account/Manage/GenerateRecoveryCodes">بازنشانی کدهای بازیابی</MudLink>
     }
 
-    <h4>Authenticator app</h4>
-    @if (!hasAuthenticator)
+    <MudText Typo="Typo.h6" GutterBottom="true">برنامه Authenticator</MudText>
+
+    @if (!_hasAuthenticator)
     {
-        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Add authenticator app</a>
+        <MudLink Href="Account/Manage/EnableAuthenticator">افزودن برنامه Authenticator</MudLink>
+        <br />
     }
     else
     {
-        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Set up authenticator app</a>
-        <a href="Account/Manage/ResetAuthenticator" class="btn btn-primary">Reset authenticator app</a>
+        <MudLink Href="Account/Manage/EnableAuthenticator">تنظیم برنامه Authenticator</MudLink>
+        <br />
+        <MudLink Href="Account/Manage/ResetAuthenticator">بازنشانی برنامه Authenticator</MudLink>
     }
 }
 else
 {
-    <div class="alert alert-danger">
-        <strong>Privacy and cookie policy have not been accepted.</strong>
-        <p>You must accept the policy before you can enable two factor authentication.</p>
-    </div>
+    <MudAlert Variant="Variant.Text" Severity="Severity.Error">سیاست حریم خصوصی و کوکی‌ها پذیرفته پذیرفته نشده است.</MudAlert>
+
+    <MudText Typo="Typo.body1" Class="pt-4">
+        شما باید قبل از فعال کردن تأیید دومرحله‌ای، سیاست را بپذیرید
+    </MudText>
 }
 
 @code {
-    private bool canTrack;
-    private bool hasAuthenticator;
-    private int recoveryCodesLeft;
-    private bool is2faEnabled;
-    private bool isMachineRemembered;
+    private bool _canTrack;
+    private bool _hasAuthenticator;
+    private int _recoveryCodesLeft;
+    private bool _is2FaEnabled;
+    private bool _isMachineRemembered;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
@@ -84,11 +95,11 @@ else
     protected override async Task OnInitializedAsync()
     {
         var user = await UserAccessor.GetRequiredUserAsync(HttpContext);
-        canTrack = HttpContext.Features.Get<ITrackingConsentFeature>()?.CanTrack ?? true;
-        hasAuthenticator = await UserManager.GetAuthenticatorKeyAsync(user) is not null;
-        is2faEnabled = await UserManager.GetTwoFactorEnabledAsync(user);
-        isMachineRemembered = await SignInManager.IsTwoFactorClientRememberedAsync(user);
-        recoveryCodesLeft = await UserManager.CountRecoveryCodesAsync(user);
+        _canTrack = HttpContext.Features.Get<ITrackingConsentFeature>()?.CanTrack ?? true;
+        _hasAuthenticator = await UserManager.GetAuthenticatorKeyAsync(user) is not null;
+        _is2FaEnabled = await UserManager.GetTwoFactorEnabledAsync(user);
+        _isMachineRemembered = await SignInManager.IsTwoFactorClientRememberedAsync(user);
+        _recoveryCodesLeft = await UserManager.CountRecoveryCodesAsync(user);
     }
 
     private async Task OnSubmitForgetBrowserAsync()
@@ -96,7 +107,7 @@ else
         await SignInManager.ForgetTwoFactorClientAsync();
 
         RedirectManager.RedirectToCurrentPageWithStatus(
-            "The current browser has been forgotten. When you login again from this browser you will be prompted for your 2fa code.",
+            "این مرورگر ذخیره نشده است. برای ورود دوباره از این مرورگر، باید کد تأیید دومرحله‌ای خود را وارد کنید.",
             HttpContext);
     }
 }
